package com.hatchloom.user.user_service.model;

public enum RoleType {
    STUDENT,
    SCHOOL_TEACHER,
    SCHOOL_ADMIN,
    HATCHLOOM_TEACHER,
    HATCHLOOM_ADMIN,
    PARENT
}

